# clapack

./: CMakeLists.txt  README.crosscompile  cm4.cmake
BLAS/: CMakeLists.txt
BLAS/SRC/: crotg.c  csscal.c  scabs1.c  scasum.c  scnrm2.c  snrm2.c  srotg.c
BLAS/TESTING/: cblat1.c  cblat2.c  cblat3.c
F2CLIBS/libf2c/: CMakeLists.txt  c_abs.c  c_cos.c  c_div.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  cabs.c  f2ch.add  pow_ci.c  pow_ri.c  r_imag.c  r_sign.c
INSTALL/: slamch.c
SRC/: cbdsqr.c  cgbbrd.c  cgbcon.c  cgbequ.c  cgbequb.c  cgbrfs.c  cgbrfsx.c  cgbsvx.c  cgbsvxx.c  cgbtrf.c  cgebal.c  cgecon.c  cgeequ.c  cgeequb.c  cgees.c  cgeesx.c  cgeev.c  cgeevx.c  cgegv.c  cgehrd.c  cgelsd.c  cgelsx.c  cgelsy.c  cgeqpf.c  cgerfs.c  cgerfsx.c  cgesc2.c  cgesdd.c  cgesvd.c  cgesvxx.c  cgetc2.c  cgetf2.c  cggbal.c  cgges.c  cggesx.c  cggev.c  cggevx.c  cggsvp.c  cgtrfs.c  cgtsv.c  (+338 more)
TESTING/EIG/: cchkbk.c  cchkbl.c  cchkgg.c  cchkgk.c  cchkgl.c  cchkhb.c  cchkhs.c  cchkst.c  cdrges.c  cdrgev.c  cdrgsx.c  cdrvev.c  cdrvgg.c  cget22.c  cget23.c  cget24.c  cget35.c  cget37.c  cget38.c  cget52.c  clatm4.c  clctes.c  cslect.c  cunt01.c  cunt03.c  schkgg.c  sdrges.c  sdrgev.c  sdrves.c  sdrvgg.c  sget24.c  sget33.c  sget34.c  sget36.c  slctes.c  sort03.c
TESTING/LIN/: cchkeq.c  cchkpt.c  cdrvgb.c  cdrvgbx.c  cdrvpt.c  cebchvxx.c  cgbt05.c  cgennd.c  cget04.c  cget07.c  cgtt05.c  chet01.c  chpt01.c  clatsp.c  clatsy.c  clattb.c  clattp.c  clattr.c  cpbt01.c  cpbt05.c  cpot01.c  cpot05.c  cppt01.c  cppt05.c  cpst01.c  cptt01.c  cptt05.c  cqrt13.c  cqrt14.c  ctbt03.c  ctbt05.c  ctpt03.c  ctpt05.c  ctrt03.c  ctrt05.c  schkeq.c  slattb.c  slattp.c  slattr.c  sqrt13.c
(+16 files in other folders)
